--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ checkout:
   post:
     - pip install -U pip setuptools virtualenv
 
-workfolws:
+workflows:
   main:
     jobs:
       - build-and-test
